--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,9 +64,9 @@ body {
 
 @layer base {
   * {
-    @apply border-border;
+    @apply border-border ;
   }
-  body {
+  /* body {
     @apply bg-background text-foreground;
-  }
+  } */
 }
